--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,13 +1,13 @@
 branch-defaults:
   main:
-    environment: hello-env
+    environment: Flask-Elastic-Beanstalk-dev
     group_suffix: null
 global:
-  application_name: hello
+  application_name: Flask-Elastic-Beanstalk
   branch: null
   default_ec2_keyname: aws-eb
-  default_platform: Python 3.7
-  default_region: us-east-1
+  default_platform: Python 3.9 running on 64bit Amazon Linux 2023
+  default_region: ap-southeast-2
   include_git_submodules: true
   instance_profile: null
   platform_name: null
